Fix: In list page, scrollbar should only span the list's viewport height

--- a/src/layout.css
+++ b/src/layout.css
@@ -15,4 +15,6 @@ body {
 
 main {
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
